# candle

./: .gitignore  CMakeLists.txt  install.sh  main.cpp  main_qt6.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
config/: numlockd.service
docs/: README.md  README.zh-Hans.md  README.zh-Hant.md  build-deb.md
numlockd/: CMakeLists.txt  ipc_server.cpp  ipc_server.h  main.cpp  numlock_simulator.cpp  numlock_simulator.h
scripts/: install.sh
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
src/numlockd/: CMakeLists.txt
